2016-06-05  Per Bothner  <per@bothner.com>

	* CommandCompleter.java (word, wordCursor, comp): New fields.
	(complete): Method is semi-deprecated - only used for jline2.

2016-06-04  Per Bothner  <per@bothner.com>

	* LitTable.java (findLiteral): Use 'matches' rather than '=='
	to see if value matches a static field.
	Also, do some caching of hash codes.

2016-06-02  Per Bothner  <per@bothner.com>

	* Language.java (setCurrentLanguage): Update prompt1 and prompt2
	dynamic variables from language defaults.
	(getPrompter): Remove method.
	(getPrimaryPrompt, getSecondaryPrompt): New methods.

	* Language.java (declFromField): Set IS_DYNAMIC if field is a
	ThreadLocation, which avoids a warning if assigning to say *print-base*.

2016-05-07  Per Bothner  <per@bothner.com>

	* NameLookup.java (getCompletingSymbols): Tweak parameter type.

2016-05-05  Per Bothner  <per@bothner.com>

	* ConditionalTarget.java (compileFromStack): Add missing emitPop
	when compiling always-true primitive numbers.  This fixes Savannah
	bug #47863 "InternalError in compilation seemingly related to if (int)".

2016-05-03  Per Bothner  <per@bothner.com>

	* LitTable.java (findLiteral): Remove redundant put operation.

	* LitTable.java (hash, matches): If immediate, use identity,
	rather than a "equality".

2016-05-02  Per Bothner  <per@bothner.com>

	Use a modified equals test rather than identity for matching literals.
	* LitTable.java: Change to extend GeneralHashTable.
	(hash, matches): Override, to a modified equals comparision.
	(literalTable): Remove field.
	(class LitEquals): New class extends IsEqual.

2016-05-01  Per Bothner  <per@bothner.com>

	* LitTable.java (emit): Fix compilation of Object[] literals.

2016-04-16  Per Bothner  <per@bothner.com>

	* ConsumerTarget.java (compileWrite): Fix incorrect consition.
	This fixes handling of unsignedIntType, for one.

2016-04-14  Per Bothner  <per@bothner.com>

	* LambdaExp.java (validateApply): Remove intra-class method-call