@@ -128,6 +128,8 @@ public class ApplicationMainSupport
       { "out:print-circle", "gnu.kawa.io.PrettyWriter", "isSharing" },
       { "out:xml-indent", "gnu.xml.XMLPrinter", "indentLoc" },
       { "display:toolkit", "gnu.kawa.models.Display", "myDisplay" },
+      { "console:prompt1", "gnu.kawa.io.CheckConsole", "prompt1" },
+      { "console:prompt2", "gnu.kawa.io.CheckConsole", "prompt2" },
       null
     };
 }
