@@ -1,3 +1,7 @@
+2016-06-11  Per Bothner  <per@bothner.com>
+
+	* standard/Scheme.scm: Update input-prompt1 and input-prompt2.
+
 2016-06-02  Per Bothner  <per@bothner.com>
 
 	* Shell.java (run): Add hook for using JLine.
